WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121159
Fix animations with !USE(ACCELERATED_COMPOSITING) after
r147792
.
https://bugs.webkit.org/show_bug.cgi?id=121159
Summary
Fix animations with !USE(ACCELERATED_COMPOSITING) after r147792.
Patrick R. Gansterer
Reported
2013-09-11 07:03:38 PDT
Fix animations with !USE(ACCELERATED_COMPOSITING) after
r147792
.
Attachments
Patch
(3.07 KB, patch)
2013-09-11 07:11 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2013-09-11 07:11:42 PDT
Created
attachment 211311
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-11 13:17:14 PDT
Comment on
attachment 211311
[details]
Patch Clearing flags on attachment: 211311 Committed
r155556
: <
http://trac.webkit.org/changeset/155556
>
WebKit Commit Bot
Comment 3
2013-09-11 13:17:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug