Fix animations with !USE(ACCELERATED_COMPOSITING) after r147792. https://bugs.webkit.org/show_bug.cgi?id=121159

Reviewed by Simon Fraser.

CSSPropertyAnimation::blendProperties() is available always
and needs to be called to make the animations work.

* page/animation/ImplicitAnimation.cpp:
(WebCore::ImplicitAnimation::animate):
* page/animation/KeyframeAnimation.cpp:
(WebCore::KeyframeAnimation::animate):


Canonical link: https://commits.webkit.org/139114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155556 268f45cc-cd09-0410-ab3c-d52691b4dbfc